# ppd-2023-seq

./: .gitignore  CMakeLists.txt  Makefile  dados_entrada_sequencial.txt  main.c
graphics/: sdl_utils.c  sdl_utils.h
structures/: grafo.c  grafo.h
